# ai-agent-chatbot

./: .gitignore  Dockerfile  Makefile  bash.exe.stackdump  db.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  settings.py  test.py
.github/workflows/: action.yml
agents/: base_agent.py  customer_service.py
infra/: main.tf  variables.tf
prompts/: operator_agent_prompt.txt
sample_script/: test_get_prompt.py  test_pdf_loader.py
src/: _types.py  config.yml  db.py  main.py  schedule.py  settings.py  try_async.py
src/agents/: base_agent.py  customer_service.py  functions.py
src/chat/: __init__.py  line.py  messenger.py
src/gcp/: drive.py  gsheet.py  sql.py
src/prompts/: functions.json  operator_agent_prompt.txt
src/utils/: common.py  datetime_utils.py  functions_calling.py  messenger.py
utils/: common.py  loader.py  prompts_utils.py
